# spot-checkpoint

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  smoke-test.yml
benchmarks/: s3_throughput.py
docs/: ARCHITECTURE.md
examples/: basic_scf.py  ccsd_large.py  restore_and_continue_scf.py  slurm_submit.sh
infra/: README.md  app.py  fis_experiment.json  run_smoke.py  smoke_stack.py
infra/cdk.out/: SpotCheckpointSmoke.assets.json  SpotCheckpointSmoke.template.json  manifest.json  tree.json
src/spot_checkpoint/: __init__.py  cli.py  gc.py  lifecycle.py  protocol.py  storage.py
src/spot_checkpoint/adapters/: __init__.py  numpy_dict.py  openmm.py  pyscf.py  scipy_opt.py  torch.py
tests/: conftest.py  test_adapters_numpy_dict.py  test_adapters_openmm.py  test_adapters_pyscf.py  test_adapters_scipy.py  test_adapters_torch.py  test_cli.py  test_direct_ec2_backend.py  test_external_solver_helpers.py  test_gc.py  test_integration.py  test_lifecycle.py  test_lifecycle_e2e.py  test_protocol.py  test_pyscf_lifecycle_integration.py  test_restore_roundtrip.py  test_storage.py  test_storage_s3.py
