[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spot-checkpoint"
version = "0.7.0"
description = "Checkpoint/restart for iterative scientific computations on preemptible cloud instances"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Scott Friedman" },
]
keywords = ["aws", "spot", "checkpoint", "pyscf", "hpc", "quantum-chemistry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "numpy>=1.24",
    "aioboto3>=12.0",
    "xxhash>=3.0",
]

[project.optional-dependencies]
pyscf = ["pyscf>=2.4"]
cli = ["typer>=0.9", "rich>=13.0"]
compress = [
    "zstandard>=0.21",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "moto[s3]>=5.0",
    "flask>=3.0",
    "flask-cors>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "typer>=0.9",
    "rich>=13.0",
]

[project.scripts]
spot-checkpoint = "spot_checkpoint.cli:app"

[project.urls]
Repository = "https://github.com/scttfrdmn/spot-checkpoint"

[tool.hatch.build.targets.wheel]
packages = ["src/spot_checkpoint"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
# typer and rich are optional CLI deps — not installed in the base dev venv
module = ["typer", "typer.*", "rich", "rich.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Typer decorators are untyped when the package is absent; relax for cli module
module = "spot_checkpoint.cli"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires PySCF installed",
    "benchmark: S3 throughput benchmarks (need real AWS)",
]

[dependency-groups]
dev = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "werkzeug>=3.1.6",
]
